setting up connection b/w front end and parser

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-h1 {
+/*h1 {
 font-weight: bold;
 font-size: 32pt;
 text-align: center;}
 
-h3{
+h3 {
   text-align: center;
 }
 
@@ -24,3 +24,4 @@ entry{
 horizontal-align: center;
 }
 
+*/
