--- a/server/style.css
+++ b/server/style.css
@@ -1,30 +1,36 @@
-.container{
+body {
+    background-image: url("http://www.attackingmartian.com/templates/EXTRAS/happyharry_000b.jpg");
+    background-position: center center;
+    background-size: 100% 100%;
+}
+
+/**********************************************************************/
+/*.container{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	background-image: linear-gradient(red, yellow);
-}
+}*/
 
 .greetingBox{
 	border: 1px solid black;
 	text-align: center;
-	background-image: linear-gradient(to right, red , yellow);
+	background-image: linear-gradient(to left, red , yellow);
 }
 
 .instructionBox{
 	border: 1px solid black;
-	text-align: center;
-	background-image: linear-gradient(to right, red , yellow);
+	/*text-align: center;*/
+	background-image: linear-gradient(to left, red , yellow);
 }
 
 .formBox{
 	border: 1px solid black;
 	text-align: center;
-	background-image: linear-gradient(to right, red , yellow);
+	background-image: linear-gradient(to left, red , yellow);
 }
 
 /**********************************************************************/
-input[type=submit]{
+/*input[type=submit]{
   background-color: #4CAF50;
   border: none;
   color: white;
@@ -34,19 +40,20 @@ input[type=submit]{
   cursor: pointer;
 }
 
-select {
+input[type=text] {
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+*/
+/*select {
   width: 100%;
   padding: 16px 20px;
   border: none;
   border-radius: 4px;
   background-color: #f1f1f1;
-}	
+}	*/
 
-input[type=text] {
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
-}
-
+/**********************************************************************/
 .inputBox{
 	border: 1px solid black;
 }
